--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="My New Hugo Site"/>
+<meta name="twitter:title" content="贝垚晨的个人博客"/>
 <meta name="twitter:description" content=""/>
 
-    <meta property="og:title" content="My New Hugo Site" />
+    <meta property="og:title" content="贝垚晨的个人博客" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://allybei.github.io/" />
@@ -25,8 +25,8 @@
   <body>
     <header class="app-header">
       <a href="https://allybei.github.io"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
-      <h1>My New Hugo Site</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium.</p>
+      <h1>贝垚晨的个人博客</h1>
+      <p>梦想还未燃尽！</p>
       <div class="app-header-social">
         
       </div>
