--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main class="app-container">
       
   <article>
-    <h1>My New Hugo Site</h1>
+    <h1>前事不忘后事之师</h1>
     <ul class="posts-list">
       
         <li class="posts-list-item">
